--- a/projects/boston_housing/boston_housing.html
+++ b/projects/boston_housing/boston_housing.html
@@ -12306,7 +12306,16 @@ Answers to the questions can be justified with this.</p>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong></p>
-<p>Yes, it is because R2 score is basically calculation of variance between prediction of y and actual value of y.</p>
+<ul>
+<li>Would you consider this model to have successfully captured the variation of the target variable? <ul>
+<li>Yes </li>
+</ul>
+</li>
+<li>Why or why not?<ul>
+<li>It is because R2 score is basically calculation of variance between prediction of y and actual value of y.</li>
+</ul>
+</li>
+</ul>
 
 </div>
 </div>
