--- a/projects/student_intervention/student_intervention.html
+++ b/projects/student_intervention/student_intervention.html
@@ -12640,9 +12640,15 @@ Although prediction time takes the longest, I will choose the classifier, becaus
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer: </strong>
+""" Too hard"""
     Supporting Vector machines is the method to classify data with hyperplanes which has maximum margin between the boundaries of data points with different class labels. Supporting vector machine, the hyperplane optimizes itself in training to maximize 2/||w|| (w: weights from feature) while classifying different data points completely.</p>
 
-<pre><code>The model makes a prediction by plotting input data points to regions which is separated by the hyperplanes. the data point's class label is chosen from the region that the point is in.</code></pre>
+<pre><code>The model makes a prediction by plotting input data points to regions which is separated by the hyperplanes. the data point's class label is chosen from the region that the point is in.
+</code></pre>
+<p>""" """</p>
+
+<pre><code>Okay, so in Layman's term, supporting vector machine is the model that divides different labeled data points with lines. Lines are trained to separate the points so that the neighboring different points do not meet each other. 
+After lines are formed, regions take up the inside of them. To predict the label, plot input into the corresponding coordinate. Then, it should be in one of the separate regions. The prediction is the label which the region represent.</code></pre>
 
 </div>
 </div>
