--- a/projects/smartcab/smartcab.html
+++ b/projects/smartcab/smartcab.html
@@ -17497,18 +17497,8 @@ JEmSJA3J/wGqOPW+J8DMPgAAAABJRU5ErkJggg==
 
     **The policy(forward) has the highest value and it is correct for the given state(None on red light).
 4.
-    ('forward', 'red', 'right', 'forward')
 
-     -- forward : -10.07
-
-     -- None : 2.36
-
-     -- right : 0.74
-
-     -- left : -9.51
-
-
-     **Although the reward on 'right' is also a valid move, there is a huge gap between None.**</code></pre>
+    **Every policy acts optimally to reward rule specified in environement.py file.**</code></pre>
 
 </div>
 </div>
@@ -17541,7 +17531,7 @@ JEmSJA3J/wGqOPW+J8DMPgAAAABJRU5ErkJggg==
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong></p>
 
-<pre><code>One characteristic that has to do with the Smartcab itself was 'waypoint' in that it determines the car's future path. The other was inputs, which are the features of the environment limited to car's front, left, and right for one block, affecting the car's next move. In my opinion, I think the future rewards will not work for this project, because the destination is chosen arbitarily, and propagating future positive rewards to current state will only give bias to the model in previous cases.</code></pre>
+<pre><code>Both characteristic is limited to smartcab's surroundings(inputs for car's left, right, and front, waypoint for the direction of the car heading to the next step to the destination). One characteristic that has to do with the Smartcab itself was 'waypoint' in that it determines the car's future path . The other was inputs, which are the features of the environment limited to car's front, left, and right for one block, affecting the car's next move. In my opinion, I think the future rewards will not work for this project, because the destination is chosen arbitarily, and propagating future positive rewards to current state will only give bias to the model in previous cases.</code></pre>
 
 </div>
 </div>
